# rust-wasm

./: Cargo.toml  README.md  index.html  rust_wasm.d.ts
.github/workflows/: build.yml
images/bluecircle/: Cargo.toml  blue_circle.html
images/bluecircle/pkg/: blue_circle.d.ts  blue_circle.js  blue_circle_bg.wasm  blue_circle_bg.wasm.d.ts  package.json
images/bluecircle/src/: lib.rs
images/spraycan/: Cargo.toml  spray_can.html
images/spraycan/pkg/: package.json  spray_can.d.ts  spray_can.js  spray_can_bg.wasm  spray_can_bg.wasm.d.ts
images/spraycan/src/: lib.rs
pkg/: README.md  package.json  rust_wasm.js  rust_wasm_bg.wasm  wasm_image_renderer.js  wasm_image_renderer_bg.wasm  wasm_image_renderer_bg.wasm.d.ts
src/: lib.rs
