[package]
name = "spray_can"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "CanvasRenderingContext2d",
    "HtmlCanvasElement",
    "HtmlElement",            # ✅ Required for get_bounding_client_rect
    "DomRect",                # ✅ Required for the return type
    "console",
    "Window",
    "Document",
    "EventTarget"
] }
rand = { version = "0.8", features = ["std", "getrandom"] }
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"

